# MovieLibrary

./: Cargo.toml  README.md  index.css  index.html
src/: main.rs
src/components/: award.rs  mod.rs  movies.rs  popular.rs
src/components/data/: IMDb.txt  belfast_about.txt  belfast_won.txt  coda_about.txt  coda_won.txt  dune_about.txt  dune_won.txt  king_about.txt  king_won.txt  menu_cast.html  menu_desc.html  menu_gross.html  mind_about.txt  mind_won.txt  moonage_cast.html  moonage_desc.html  moonage_gross.html  parasite_about.txt  parasite_won.txt  poker_cast.html  poker_desc.html  poker_gross.html  violent_cast.html  violent_desc.html  violent_gross.html  wakanda_cast.html  wakanda_desc.html  wakanda_gross.html  water_about.txt  water_won.txt
src/pages/: abouttab.rs  awardtab.rs  hometab.rs  mod.rs  moviestab.rs  populartab.rs
